WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82846
Web Inspector: [JSC] crash when closing a window / tab while stopped in the debugger
https://bugs.webkit.org/show_bug.cgi?id=82846
Summary
Web Inspector: [JSC] crash when closing a window / tab while stopped in the d...
Timothy Hatcher
Reported
2012-04-01 11:40:13 PDT
1 page zero 000000000000000000 0 + 0
> 2 com.apple.WebCore 0x7fff81c2bcab WebCore::ScriptDebugServer::dispatchFunctionToListeners(void (WebCore::ScriptDebugListener::*)(), WebCore::Page*) + 0x6b
3 com.apple.WebCore 0x7fff81c2ba05 WebCore::ScriptDebugServer::pauseIfNeeded(WebCore::Page*) + 0x185 4 com.apple.JavaScriptCore 0x7fff87e40468 JSC::Interpreter::debug(JSC::ExecState*, JSC::DebugHookID, int, int) + 0xd8 5 0x000030fb4c6d887c 0 + 53855877171324 6 com.apple.JavaScriptCore 0x7fff87e50f5c JSC::Interpreter::execute(JSC::FunctionExecutable*, JSC::ExecState*, JSC::JSFunction*, JSC::JSObject*, JSC::ArgList const&, JSC::ScopeChainNode*, JSC::JSValue*) + 0x1fc 7 0x00000001290c5b80 0 + 4983643008 8 0x000000012cc09280 0 + 5045785216 9 com.apple.WebCore 0x7fff81d8e620 WebCore::JSHTMLDocument::~JSHTMLDocument() + 0x0 10 0x8d48078948eebb29 0 + 10180395243886525225 <
rdar://problem/8133494
>
Attachments
Proposed Change
(3.19 KB, patch)
2012-04-01 11:44 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2012-04-01 11:44:36 PDT
Created
attachment 135008
[details]
Proposed Change
WebKit Review Bot
Comment 2
2012-04-01 13:23:32 PDT
Comment on
attachment 135008
[details]
Proposed Change Clearing flags on attachment: 135008 Committed
r112818
: <
http://trac.webkit.org/changeset/112818
>
WebKit Review Bot
Comment 3
2012-04-01 13:23:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug