Source/WebCore/bindings/js/PageScriptDebugServer.cpp
@@ -131,20 +131,34 @@ ScriptDebugServer::ListenerSet* PageScriptDebugServer::getListenersForGlobalObje
 
 void PageScriptDebugServer::didPause(JSC::JSGlobalObject* globalObject)
 {
+    ASSERT(!m_pausedPage);
+
     Page* page = toPage(globalObject);
+    ASSERT(page);
+    if (!page)
+        return;
+
     m_pausedPage = page;
+
     setJavaScriptPaused(page->group(), true);
 }
 
 void PageScriptDebugServer::didContinue(JSC::JSGlobalObject* globalObject)
 {
+    // Page can be null if we are continuing because the Page closed.
     Page* page = toPage(globalObject);
+    ASSERT(!page || page == m_pausedPage);
+
     m_pausedPage = 0;
-    setJavaScriptPaused(page->group(), false);
+
+    if (page)
+        setJavaScriptPaused(page->group(), false);
 }
 
 void PageScriptDebugServer::didRemoveLastListener(Page* page)
 {
+    ASSERT(page);
+
     if (m_pausedPage == page)
         m_doneProcessingDebuggerEvents = true;
 
